<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/main_home_background" />


    <ImageView
        android:id="@+id/main_img_guidemon"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:layout_marginStart="50dp"
        android:layout_marginTop="518dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="13dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/startLayout"
        android:layout_width="wrap_content"
        android:layout_height="488dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="221dp"
        android:orientation="vertical"
        android:padding="40dp">

        <Button
            android:id="@+id/buttonAnalytics"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/analytics"
            android:textColor="@color/black"
            android:textSize="22dp" />
        <Button
            android:id="@+id/buttonPay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="Платежи"
            android:textColor="@color/yellow"
            android:textSize="22sp" />

        <Button
            android:id="@+id/buttonHistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/history"
            android:textColor="@color/white"
            android:textSize="22dp" />

        <Button
            android:id="@+id/buttonCategoryMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="Категории"
            android:textColor="@color/red"
            android:textSize="22sp" />

        <Button
            android:id="@+id/buttonDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/data_settings"
            android:textColor="@color/yellow"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/info"
            android:textColor="@color/yellow"
            android:textSize="22sp" />

        <Button
            android:id="@+id/buttonback"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/back"
            android:textColor="@color/yellow"
            android:textSize="22sp" />


    </LinearLayout>


</RelativeLayout>