<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/main_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/main_home_background"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/main_background_back"
        android:layout_width="373dp"
        android:layout_height="223dp"
        android:scaleType="centerCrop"
        android:src="@drawable/back_backitem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <ImageView
        android:id="@+id/main_back_back_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/backitem"
        app:layout_constraintStart_toStartOf="@+id/main_background_back"
        app:layout_constraintTop_toTopOf="@+id/main_background_back" />

    <EditText
        android:id="@+id/category"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:hint="Введите Категорию"
        android:text=""
        android:textColorHint="@color/black"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="@+id/main_background_back"
        app:layout_constraintTop_toBottomOf="@+id/main_back_back_item" />


    <Switch
        android:id="@+id/switch1"
        android:layout_width="108dp"
        android:layout_height="45dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="16dp"
        android:showText="true"

        android:text="Цель"
        android:textColorHint="@color/black"
        android:textOff="Р"
        android:textOn="Д"
        android:textSize="22dp"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/category" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="save"
        android:text="Сохранить"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_background_back"
        app:layout_constraintVertical_bias="0.123" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:onClick="delete"
        android:text="Удалить"
        app:layout_constraintStart_toEndOf="@+id/saveButton"
        app:layout_constraintTop_toTopOf="@+id/saveButton" />


    <Button
        android:id="@+id/buttonback1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteButton"
        app:layout_constraintVertical_bias="0.779" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/textcategory"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/main_background_back"
        app:layout_constraintTop_toTopOf="@+id/main_back_back_item" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/textonoffinfo"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/main_background_back"
        app:layout_constraintTop_toBottomOf="@+id/category" />

    <TextView
        android:id="@+id/textincome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/incomee"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toTopOf="@+id/textView17" />

    <TextView
        android:id="@+id/textrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/ratee"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toTopOf="@+id/textView17" />

</androidx.constraintlayout.widget.ConstraintLayout>